--- a/MainApp/style.css
+++ b/MainApp/style.css
@@ -1,82 +1,148 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    color:  black;
+    color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
 }
 
-.logo img{
-    width: 150px;
-
-}
-
-.bar{
+.headerbar {
     display: none;
 }
-.header{
+
+.logo img {
+    width: 150px;
+}
+
+.bar {
+    display: none;
+}
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 130px;   
+    height: 130px;
     background-color: rgb(248, 232, 217);
-    border-bottom: 2px solid rgb(252,196,124);
-    box-shadow: 0 2px 20px rgb(253,124,124);
+    border-bottom: 2px solid rgb(252, 196, 124);
+    box-shadow: 0 2px 20px rgb(253, 124, 124);
 }
 
-.header ul{
+.header ul {
     display: flex;
     align-items: center;
 }
 
-.header ul li:hover{
+.header ul li:hover {
     color: rgb(253, 57, 8);
 }
 
-.nav ul li{
+.nav ul li {
     padding: 0 15px;
     font-size: 14px;
     font-weight: bold;
-
 }
 
-.account{
+.account {
     flex: 0.1;
 }
 
-.account ul{
+.account ul {
     display: flex;
     justify-content: end;
 }
 
-.account ul li{
+.account ul li {
     padding: 0 15px;
     font-size: 18px;
 }
 
-.bar i:hover{
+.bar i:hover {
     color: rgb(253, 57, 8);
 }
 
-.search{
+.search {
     display: none;
+    visibility: hidden;
+    opacity: 0;
     width: 200px;
-    justify-content: center;    
+    justify-content: center;
 }
 
-.search input{
-    width: 100;
+.search input {
+    width: 100%;
     outline: none;
     border: none;
     padding: 5px;
 }
 
-.searchicon{
+.searchicon {
     background-color: rgb(255, 210, 210);
     display: block;
     padding: 4px 5px;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 768px) {
+    .header .nav, .header .account {
+        display: none;
+        visibility: 18px;
+    }
+    .search {
+        width: 60vw;
+    }
+    .bar {
+        display: block;
+        cursor: pointer;
+    }
+    .headerbar {
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        bottom: 0;
+        right: -100%;
+        transition: all 0.5s;
+        background-color: rgb(252, 231, 216);
+    }
+    .headerbar .account, .headerbar .nav {
+        display: block;
+        font-size: 18px;
+    }
+
+    .bar .fa-xmark {
+        display: none;
+        top: 20px;
+        right: 5vw;
+        position: absolute;
+        font-size: 25px;
+    }
+
+    .headerbar .nav ul {
+        flex-direction: column;
+        margin-top: 10px;
+        text-align: center;
+    }
+    .headerbar .nav li {
+        width: 96vw;
+        margin: 10px 0;
+        padding: 15px 30px;
+        box-shadow: 0 2px 15px rgb(252, 193, 169);
+        font-size: 15px;
+        margin-top: 5px;
+    }
+
+    .headerbar .account {
+        line-height: 40px;
+        margin-top: 60px;
+        background-color: rgb(252, 210, 182);
+        padding: 15px;
+    }
+    .headerbar .account ul {
+        justify-content: space-between;
+    }
 }
