--- a/MainApp/style.css
+++ b/MainApp/style.css
@@ -85,6 +85,78 @@
     cursor: pointer;
 }
 
+.home{
+    background-color: rgb(248, 232, 217);
+    padding: 0 7vw;
+}
+
+.main{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap-reverse;
+}
+
+.main_image_page{
+    height: auto;
+    width: 800px;
+    margin-left: auto;
+    
+}
+.main_slide div:nth-child(2){
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
+}
+
+.main_slide div:nth-child(1){
+    padding-top: 20px;
+    flex: 1;
+    font-size: 30px;
+}
+
+.main_slide div:nth-child(1) p{
+    font-size: 13px;
+    padding: 20px 0;
+}
+
+.main_slide div:nth-child(1) span{
+    color: rgb(253, 57, 8);
+    text-decoration: underline;
+    text-underline-offset: 10px;
+    text-decoration-color: rgb(253, 176, 34) ;
+}
+
+.red_btn{
+    cursor: pointer;
+    margin-top: 20px;
+    width: 160px;
+    font-weight: bold;
+    color: aliceblue;
+    line-height: 50px;
+    background-color: rgb(253, 77, 8);
+    border-radius: 5px;
+    border: 1px solid rgb(253, 57, 8);
+    box-shadow: 0 10px 15px rgb(250, 120, 69);
+    transition: all 0.2s;
+}
+
+.red_btn i{
+    color: white;
+    transition: all 0.2s;
+}
+
+.red_btn:hover{
+    background-color: white;
+    box-shadow: 0 2px 15px  rgb(250, 120, 69);
+    border: 1px solid rgb(253, 77, 8);
+    color: rgb(253, 57, 8);
+}
+
+.red_btn:hover i {
+    color: rgb(253, 77, 8);
+}
+
 @media only screen and (max-width: 768px) {
     .header .nav, .header .account {
         display: none;
@@ -146,3 +218,31 @@
         justify-content: space-between;
     }
 }
+
+@media only screen and (max-width: 550px){
+    .main_slide div:nth-child(1){
+        font-size: 18px;
+    }    
+
+    .main_slide div:nth-child(1) p{
+        padding-top: 5px;
+        margin: 10px 0;
+        font-size: 11px;
+    }
+
+    .red_btn{
+        margin-top: 10px;
+        width: 120px;
+        line-height: 30px;
+        font-size: 12px;
+        padding: 0 10px;
+    }
+
+    .main_slide div:nth-child(1) span{
+        text-underline-offset: 5px;
+        }
+    .main_slide div:nth-child(2) img{
+        width: 70vw;
+    }
+}
+
