some images added

--- a/MainApp/style.css
+++ b/MainApp/style.css
@@ -217,6 +217,56 @@
 
 }
 
+
+.main_slide2{
+    margin: 80px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.foodimg{
+    flex: 0.5;
+}
+
+.foodimg img{
+    max-width: 500px;
+    width: 45vw;
+}
+
+.question{
+    flex: 0.5;
+    flex-direction: column;
+    margin-left: 40px;
+}
+
+.question h2{
+    font-size: 35px;
+    margin-bottom: 15px;
+}
+
+.q_ans{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 15px 0;
+    cursor: pointer;
+}
+
+.q_ans img{
+    width: 45px;
+}
+
+.q_ans div:first-child{
+    padding: 10px;
+    border-radius: 50%;
+    height: 65px;
+    text-align: center;
+    background-color: white;
+    margin-right: 20px;
+}
+
 @media only screen and (max-width: 768px) {
     .header .nav, .header .account {
         display: none;
