--- a/MainApp/style.css
+++ b/MainApp/style.css
@@ -347,6 +347,97 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
     border: 10px;
 }
 
+.main_slide4 {
+    margin-top: 270px;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    margin-bottom: 200px;
+}
+
+.main_slide4 .chef-feed{
+    flex:0.5;
+    margin-top: 30px;
+}
+
+.main_slide4 .chef{
+    flex: 0.5;
+    text-align: right;
+}
+
+.main_slide4 .chef img{
+    margin-top: -130px;
+    width: 50vw;
+    max-width: 490px;
+}
+
+.main_slide4 .chef-feed h2{
+    font-size: 32px;
+    margin-bottom: 25px;
+}
+
+.main_slide4 .chef-feed h4{
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.main_slide4 .chef-detail {
+    margin-top: 20px;
+    display: flex;
+    margin: 25px 0;
+    align-items: center;
+}
+
+.main_slide4 .chef-detail img{
+    width: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+    border: 4px solid white;
+}
+
+.main_slide4 .chef-detail h6{
+    font-size: 14px;
+}
+
+.main_slide4 .chef-detail p{
+    font-size: 11px;
+    color: red;
+}
+
+.main_slide4 .chef-vic {
+    display: flex;
+    align-items: center;
+    padding: 20px 0;
+    background-color: rgb(255, 219, 185);
+    border-radius: 0 100px 0 0 ;
+    margin-top: 40px;
+    width: 100%;
+}
+
+.main_slide4 .chef-vic div{
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    flex: 0.5;
+    height: 27px;
+    overflow: hidden;
+}
+
+.main_slide4 .chef-vic div i, .main_slide4 .chef-vic div h4{
+    font-size: 27px;
+    margin-right: 8px;
+}
+
+.main_slide4 .chef-vic div h4{
+    color: red;
+}
+
+.main_slide4 .chef-vic p{
+    font-size: 11px;
+    padding-top: 8px;
+    line-height: 13px;
+}
+
 @media only screen and (max-width: 768px) {
     .header .nav, .header .account {
         display: none;
@@ -443,6 +534,25 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
         width: 80%;
         margin-bottom: 20px;
     }
+
+    .main_slide4 {
+        margin-top: 150px;
+    }
+    .main_slide4 .chef-feed{
+        flex: 1;
+    }
+
+    .main_slide4 .chef{
+        flex: 1;
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    .main_slide4 .chef img {
+        width: 80vw;
+    }
+
+    
 }
 
 @media only screen and (max-width: 550px){
@@ -500,6 +610,8 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
         display: none;
     }
 
-
+    .main_slide4 .chef-vic div p{
+        display: none;
+    }
 }
 
