--- a/MainApp/style.css
+++ b/MainApp/style.css
@@ -351,7 +351,6 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
     margin-top: 270px;
     display: flex;
     flex-wrap: wrap-reverse;
-    margin-bottom: 200px;
 }
 
 .main_slide4 .chef-feed{
@@ -436,6 +435,56 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
     font-size: 11px;
     padding-top: 8px;
     line-height: 13px;
+}
+
+.letter{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 100px 0;
+}
+
+.letter-head{
+    flex: 0.5;
+}
+
+.letter-head h2{
+    font-size: 30px;
+}
+
+.letter-head span{
+    color: red;
+}
+
+.letter-input{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex: 0.5;
+}
+
+.letter-input div{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    background-color: rgb(255, 219, 185);
+}
+
+.letter-input input{
+    font-size: 15px;
+    padding: 10px;
+    outline: none;
+    width: 100%;
+    border: none;
+    background-color: white;
+}
+
+.letter-input .red_btn{
+    margin: 0;
+    font-size: 18px;
+    box-shadow: none;
+    border-radius: 0 10px 10px 0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -552,6 +601,21 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
         width: 80vw;
     }
 
+    .letter-head h2{
+        font-size: 20px;
+    }
+
+    .letter-input{
+        font-size: 12px;
+        padding: 15px;
+        width: 50vw;
+    }
+
+    .letter-input .red_btn{
+        line-height: 40px;
+        width: 120px;
+        font-size: 12px;
+    }
     
 }
 
@@ -612,6 +676,15 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
 
     .main_slide4 .chef-vic div p{
         display: none;
+    }
+
+    .letter{
+        justify-content: center;
+    }
+
+    .letter-head{
+        flex: 1;
+        text-align: center;
     }
 }
 
