--- a/style.css
+++ b/style.css
@@ -92,6 +92,26 @@
     padding: 0 7vw;
 }
 
+.Take_In_Out_Container {
+    display: flex;
+    justify-content: center; /* Center buttons horizontally */
+    align-items: center; /* Align them vertically */
+    gap: 15px; /* Add spacing between buttons */
+    flex: 1;
+}
+
+.Take_In_Out {
+    background-color: rgb(253, 124, 124);;
+    color: white;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding: 8px 15px;
+    font-size: 14px;
+    border-radius: 5px;
+    text-align: center;
+}
+
 .about-us{
     background-color: rgb(248, 232, 217);
     padding: 0 7vw;
@@ -639,6 +659,11 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
     margin-bottom: 30px;
 }
 
+.dinner p{
+    font-size: 15px;
+    padding: 10px;
+}
+
 .dinner .price{
     font-weight: bold;
     color: red;   
@@ -762,6 +787,7 @@ box-shadow: 0 10px 15px rgb(250, 120, 69);
     border: none; /* Remove any borders */
     margin: 0; /* Reset margins */
 }
+
 
 
 @media only screen and (max-width: 768px) {
